style.css
@font-face {
    font-family: Caprasimo;
    src: url("./fonts/Caprasimo/Caprasimo-Regular.ttf");
}

@media screen and (max-width: 600px) {

    body,
    html {
        font-size: 20px;
    }
}

@media screen and (min-width: 601px) {

    body,
    html {
        font-size: 24px;
    }
}

body,
html {
    height: 100%;
    margin: 0;
    scroll-behavior: smooth;
    font-family: Caprasimo;
    line-height: 1.5;
}

app-root {
    overflow-x: hidden;
}

section {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    text-align: center;
}

#home {
    display: inline;
}

h2 {
    margin-bottom: 0;
}

